# loom

./: .gitignore  .gitmodules  CMakeLists.txt  inter_thread_communication.cpp  inter_thread_communication.h  itc.cpp  itc.h  main.cpp  readme.md  thread.cpp  thread.h
examples/state_machine/: threaded_state_machine.cpp
examples/threading/: main_thread.cpp  server_client_async.cpp  server_client_sync.cpp  transmitter_clone_functor.cpp  transmitter_receiver.cpp
examples/ui/: imgui_demo.cpp  inkjet.cpp  inkjet_threaded.cpp  ui.cpp  ui_threaded.cpp
loom/: itc.h  loom.h  queue.h  server_client.cpp  server_client.h  service.h  thread.cpp  thread.h  transmitter_receiver.cpp  transmitter_receiver.h
loom/comm/: udp_client.cpp  udp_client.h
loom/loom/comm/: udp_client.h
loom/loom/state_machine/: state_machine.h
loom/loom/threading/: queue.h  server_client.h  thread.h  transmitter_receiver.h
loom/loom/ui/: style.cpp  style.h  ui.cpp  ui.h
loom/state_machine/: state_machine.h
loom/threading/: queue.h  server_client.h  thread.cpp  thread.h  transmitter_receiver.h
loom/ui/: inkjet.cpp  inkjet.h  style.cpp  style.h  ui.cpp  ui.h
tests/: main_thread.cpp  server_client.cpp  server_client_async.cpp  server_client_sync.cpp  state_machine.cpp  transmitter_copy_func.cpp  transmitter_receiver.cpp
tests/state_machine/: threaded_state_machine.cpp
tests/threading/: server_client_async.cpp  server_client_sync.cpp
